--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -18,23 +18,76 @@
 <p>進行任務分派,並以小組方式完成assiganment 1</p>
 <p><img alt="" height="378" src="/images/57278.jpg" width="379"/></p>
 <p>課程討論直播紀錄</p>
-<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/JXUKf0cfJcc" width="500"></iframe></p><h2>第三週</h2>
-<p><br/><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/QTfPD5bpeKc" width="500"></iframe></p><h2>第五週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/ElNea4b1dX8" width="500"></iframe></p><h2>第六週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/B6jt5OAf424" width="500"></iframe></p><h2>第七週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/96y-KSUWDyE" width="500"></iframe></p><h1>每周進度</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/JXUKf0cfJcc" width="500"></iframe></p>
+<h2>第三週</h2>
+<p><br/><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/QTfPD5bpeKc" width="500"></iframe></p>
+<h2>第五週</h2>
+<p>分配翻譯段落並將完成檔案上傳至個人網頁</p>
+<p><img alt="" height="274" src="/images/57277.jpg" width="500"/></p>
+<p>討論課程直播紀錄</p>
+<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/ElNea4b1dX8" width="500"></iframe></p>
+<h2>第六週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/B6jt5OAf424" width="500"></iframe></p>
+<h2>第七週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/96y-KSUWDyE" width="500"></iframe></p>
+<h1>每周進度</h1>
 <h2>w1</h2>
 <h4>本週進度</h4>
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
-<h2>w2</h2>
+<p><img alt="" height="432" src="/images/3444.png" width="768"/></p><h2>w2</h2>
 <h4>本週進度</h4>
 <p>更新python至3.8.2,進行小組直播討論並分配分組作業</p>
-<h2>w6</h2>
+<h2>w3</h2>
+<h4>本週進度</h4>
+<p>以小組方式進行亂數分組研究 以下是程式碼代表的內容如下</p>
+<p><strong>1. random.random()</strong></p>
+<p>　　random.random()方法返回一個隨機數，其在0至1的範圍之內，以下是其具體用法：</p>
+<p>　　import random</p>
+<p>　　print (“隨機數: “, random.random())</p>
+<p>　　輸出結果：0.22867521257116</p>
+<p><strong>2. random.uniform()</strong></p>
+<p>　　random.uniform()是在指定範圍內生成隨機數，其有兩個引數，一個是範圍上限，一個是範圍下線，具體用法如下：</p>
+<p>　　import random</p>
+<p>　　print (random.uniform(2, 6))</p>
+<p>　　輸出結果：3.62567571297255</p>
+<p><strong>3. random.randint()</strong></p>
+<p>　　random.randint()是隨機生成指定範圍內的整數，其有兩個引數，一個是範圍上限，一個是範圍下線，具體用法如下：</p>
+<p>　　import random</p>
+<p>　　print (random.randint(6,8))</p>
+<p>　　輸出結果：8</p>
+<p><strong>4. random.randrange()</strong></p>
+<p>　　random.randrange()是在指定範圍內，按指定基數遞增的集合中獲得一個隨機數，有三個引數，前兩個引數代表範圍上限和下限，第三個引數是遞增增量，具體用法如下：</p>
+<p>　　import random</p>
+<p>　　print (random.randrange(6, 28, 3))</p>
+<p>　　輸出結果：15</p>
+<p><strong>5. random.choice()</strong></p>
+<p>　　random.choice()是從序列中獲取一個隨機元素，具體用法如下：</p>
+<p>　　import random</p>
+<p>　　print (random.choice(“www.jb51.net”))</p>
+<p>　　輸出結果：o</p>
+<p><strong>6. random.shuffle()</strong></p>
+<p>　　random.shuffle()函式是將一個列表中的元素打亂，隨機排序，具體用法如下：</p>
+<p>　　import random</p>
+<p>　　num = [1, 2, 3, 4, 5]</p>
+<p>　　random.shuffle(num)</p>
+<p>　　print (num)</p>
+<p>　　輸出結果：[3, 5, 2, 4, 1]</p>
+<p><strong>7. random.sample()<br/></strong></p>
+<p>　　random.sample()函式是從指定序列中隨機獲取指定長度的片段，原有序列不會改變，有兩個引數，第一個引數代表指定序列，第二個引數是需獲取的片段長度，具體用法如下：</p>
+<p>　　import random</p>
+<p>　　num = [1, 2, 3, 4, 5]</p>
+<p>　　sli = random.sample(num, 3)</p>
+<p>　　print (sli)</p>
+<p>　　輸出結果：[2, 4, 5]</p>
+<p>參考資料: https://codertw.com/%E7%A8%8B%E5%BC%8F%E8%AA%9E%E8%A8%80/357241/</p><h2>w6</h2>
 <h4>本週進度</h4>
 <p>進行小組直播討論,分配工作內容 : 翻譯</p>
 <h2>w7</h2>
 <p>本週是assiganmant2截止時間,這週課程也是採用線上教學模式,老師進行組別隨機抽點直播</p>
-<p><img caption="false" height="279" src="/images/未命名.png" width="300"/></p><h1>Assiganment2</h1>
+<p><img caption="false" height="279" src="/images/未命名.png" width="300"/></p>
+<p>直播紀錄影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/Y04PMdEY6P4" width="420"></iframe></p>
+<h1>Assiganment2</h1>
 <h4>Top 0感想</h4>
 <p>40723153 吳佳穎</p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
