--- a/content/第六週.html
+++ b/content/第六週.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a></li></ul><li><a href='Assiganment2.html'>Assiganment2</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a></li></ul><li><a href='Assiganment2.html'>Assiganment2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -155,7 +155,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">第五週 << <a href='第五週.html'>Previous</a> <a href='第七週.html'>Next</a> >> 第七週<br /><h1>第六週</h1>
-<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/B6jt5OAf424" width="500"></iframe></p><br />第五週 << <a href='第五週.html'>Previous</a> <a href='第七週.html'>Next</a> >> 第七週</div>
+<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/B6jt5OAf424" width="500"></iframe></p>
+<br />第五週 << <a href='第五週.html'>Previous</a> <a href='第七週.html'>Next</a> >> 第七週</div>
         
     <!-- footer -->
       <div class="container">
