--- a/reveal/index.html
+++ b/reveal/index.html
@@ -39,17 +39,13 @@ CMSimfly 網際內容管理
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## CMSimfly 網際內容管理
+## 協同產品設計實習
 
-### KMOLab
+### 40723153
 
 <small>
-Created by [KMOLab](http://lab.kmol.info/)
+Created by [40723153](https://40723153.github.io/cd2020/content/index.html)
 </small>
-
-[CMSimfly 網誌](./../blog/index.html)
-
-
     </script>
 </section>
 
